--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
 	// 시큐리티
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
-	testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.testng:testng:7.1.0'
+    testImplementation 'org.springframework.security:spring-security-test'
 
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	// Lombok
