--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,15 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### frontend ###
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
