refactoring: rest service
리팩토링에 필요한 글로벌 파일 추가 및 패키지 이동

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	//Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3', 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 }
 
 tasks.named('test') {
